<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Fo.dex</string>
    <string name="facebook_app_id" translatable="false">351186671748872</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_all_photos">All Photos</string>
    <string name="title_shared_photos">Shared Photos</string>
    <string name="title_indexed_photos">Indexed Photos</string>
    <string name="title_unindexed_photos">Unindexed Photos</string>
    <string name="title_settings">Settings</string>
    <string name="title_should_delete_tag">Delete Tag?</string>

    <string name="search_bar_hint">Tags</string>
    <string name="title_activity_fullscreen">Fullscreen</string>

    <plurals name="dialog_index_photo">
        <item quantity="one">Index Your Photo</item>
        <item quantity="other">Index Your Photos</item>
    </plurals>
    <string name="dialog_insert_tag_hint">Insert Your Tags Here</string>

    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_ok">OK</string>

    <plurals name="message_add_tag">
        <item quantity="one">You have tagged %d photo</item>
        <item quantity="other">You have tagged %d photos</item>
    </plurals>
    <string name="message_please_insert_tag">Please type in your tag name</string>
    <string name="message_please_install_whatsapp">Please Install WhatsApp</string>
    <string name="message_please_install_facebook">Please Install Facebook</string>
    <string name="message_please_install_google">Please Install Google+</string>
    <string name="message_please_install_instagram">Please Install Instagram</string>
    <string name="message_no_photo">You must select a photo first</string>
    <string name="message_no_tag">Oh, no tags are found</string>
    <string name="message_no_photos_found">No photos found</string>

    <string name="setting_title_accounts">Accounts</string>
    <string name="setting_title_account_facebook">Facebook</string>
    <string name="setting_title_account_google_plus">Google+</string>

</resources>
