<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <com.dyhpoon.fodex.view.RobotoMediumTextView
        android:id="@+id/account_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_title_accounts"
        android:textColor="@color/colorTitleGreen"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <com.dyhpoon.fodex.view.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/setting_title_account_facebook"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <com.gc.materialdesign.views.Switch
            android:id="@+id/facebook_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/buttonSwitchColor" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <com.dyhpoon.fodex.view.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/setting_title_account_google_plus"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <com.gc.materialdesign.views.Switch
            android:id="@+id/google_plus_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/buttonSwitchColor" />

    </RelativeLayout>

</LinearLayout>